tests/semantic/invalid/expected/argument_count_mismatch.txt
semantic error: несоответствие количества аргументов - несоответствие количества аргументов при вызове 'add': ожидалось 2, получено 1
  --> tests/semantic/invalid/argument_count_mismatch.src:6:18
6      int result = add(5);
                    ^
   = подсказка: проверьте сигнатуру функции и количество передаваемых аргументов

